added all text portfolio is now finished

--- a/blenderEn.html
+++ b/blenderEn.html
@@ -51,7 +51,7 @@
               <img src="PortfolioBlenderImg/AxeNPGJ.png" class="card-img-top" alt="NPGJAxe">
               <div class="card-body">
                 <h5 class="card-title text-light">NPGJ Axe</h5>
-                <p class="card-text text-light">Tijdens de Game Jam van Noorderpoort heb ik ook deze bijl gemaakt.
+                <p class="card-text text-light">During Noorderpoort's Game Jam, I made this axe.
                 </p>
               </div>
             </div>
@@ -64,8 +64,8 @@
               </video>
               <div class="card-body">
                 <h5 class="card-title text-light">RTS models</h5>
-                <p class="card-text text-light">In de RTS die ik met mijn groep heb gemaakt.
-                   heb ik alle models van de speler en vijand gemaakt in blender. De animaties heb ik van Mixamo afgehaald.
+                <p class="card-text text-light">In the RTS I made with my group.
+                  I made all the player and enemy models in blender. I got the animations from Mixamo.                  
                 </p>
               </div>
             </div>
@@ -76,8 +76,8 @@
                 <img src="PortfolioBlenderImg/NGJSpeler.png" class="card-img-top" alt="NPGJSpeler">
                 <div class="card-body">
                   <h5 class="card-title text-light">NPGJ Player</h5>
-                  <p class="card-text text-light">Wij hadden een kleine Game Jam waarbij de eerste en tweede klassers samen gingen werken.
-                     Ik heb voor deze speler model gezorgd. 
+                  <p class="card-text text-light">We had a little Game Jam where the first and second graders got to work together. 
+                    I provided this player model. 
                   </p>
                 </div>
               </div>
@@ -88,7 +88,7 @@
                   <img src="PortfolioBlenderImg/RaceCar.png" class="card-img-top" alt="blenderRaceCar">
                   <div class="card-body">
                     <h5 class="card-title text-light">Race car</h5>
-                    <p class="card-text text-light">Een van mijn eerste models die ik gemaakt heb is deze race auto.
+                    <p class="card-text text-light">One of my first models I made was this race car.
                     </p>
                   </div>
                 </div>
@@ -99,8 +99,9 @@
                   <img src="PortfolioBlenderImg/KabouterTD.png" class="card-img-top" alt="KabouterTD">
                   <div class="card-body">
                     <h5 class="card-title text-light">Gnome Tower Defence</h5>
-                    <p class="card-text text-light">Voor onze tower defence moesten we ieder een toren maken.
-                       Mijn groep had ervoor gekozen om met een kabouter thema te gaan.</p>
+                    <p class="card-text text-light">For our tower defense, we each had to make a tower.
+                      My group had chosen to go with a gnome theme.
+                      </p>
                   </div>
                 </div>
             </div>
@@ -110,7 +111,7 @@
                   <img src="PortfolioBlenderImg/TowersTD.png" class="card-img-top" alt="TowersTD">
                   <div class="card-body">
                     <h5 class="card-title text-light">Towers Tower Defence</h5>
-                    <p class="card-text text-light">Dit zijn mijn torens. Elke toren moest 3 levels hebben.</p>
+                    <p class="card-text text-light">These are my towers. Each tower had to have 3 levels.</p>
                   </div>
                 </div>
             </div>
