--- a/contactEn.html
+++ b/contactEn.html
@@ -20,13 +20,13 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="projectenEn.html">Projecten</a>
+                <a class="nav-link" href="projectenEn.html">Projects</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="blenderEn.html">Blender</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="overmijEn.html">Over mij</a>
+                <a class="nav-link" href="overmijEn.html">About me</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contactEn.html">Contact</a>
@@ -42,7 +42,7 @@
       </nav>
 
       <div class="p-4 d-flex flex-column w-100 align-items-center">
-          <h1 class="text-light p-4">U kunt gerust contact met mij opnemen via de volgende linken:</h1>
+          <h1 class="text-light p-4">Please feel free to contact me at the following links:</h1>
           <div class="">
           <h2 class="text-light p-4"><img src="PortfolioImg/MailLogoBlue.png" alt="MailLogo" width="80px" height="80px"> 
             <img src="PortfolioImg/EmailScreenshot.png" alt="EmailScreenshot"></h2>
