--- a/indexEn.html
+++ b/indexEn.html
@@ -42,8 +42,8 @@
       </nav>
 
       <div class="container">
-        <h2 class="text-light p-4 text-center">Hallo, mijn naam is Marlies. 
-          <br>Ik ben een software game developer op Noorderpoort in Groningen.
+        <h2 class="text-light p-4 text-center">Hello, my name is Marlies. 
+          <br>I am a software game developer at Noorderpoort in Groningen.
         </h2> 
       </div>
 
