--- a/overmijEn.html
+++ b/overmijEn.html
@@ -46,29 +46,29 @@
         <h3  class="text-light text-center">
           <div class="container-aboutme">
             <div class="text">
-              Hallo, mijn naam is Marlies. <br>
-              Op dit moment zit ik in mijn tweede jaar Software Game Development op Noorderpoort in Groningen.
-              Ik heb 6 projecten gemaakt en ben bezig met een zelfgemaakte VR game op dit moment. 
-              Ook heb ik meegedaan aan de Global Game Jam van 2023 en 2024 in Groningen samen met een paar klasgenoten.  
+              Hello, my name is Marlies. <br>
+              I am currently in my second year of Software Game Development at Noorderpoort in Groningen. 
+              I have created 6 projects and am working on a homemade VR game at the moment. 
+              I also participated in the 2023 and 2024 Global Game Jam in Groningen together with some classmates.  
             </div>
             <div class="img">
               <img src="PortfolioImg/PortfolioAboutMeFotoCropped.jpg" alt="MijnHoofd" height="300px" width="300px">
             </div>
           </div>
             <br><br> 
-            Het programma wat ik nu het meeste gebruik is Unity met C#. 
-            Ik heb al een klein begin gemaakt aan Unreal Engine 5 met blueprints en Godot met Gd script. 
-            Verder heb ik al een basis met het maken van modellen in Blender. 
-            Wanneer ik klaar ben met deze opleiding wil ik games gaan maken die met passie gemaakt zijn. 
-            Mijn goal is om een bedrijf te vinden waar ik met een enthousiaste groep kan werken aan games. 
-            Ik ben ook nog van plan om zelf wat kleine games te maken en online te zetten om te zien hoe ik mezelf kan verbeteren.
+            The program I use most now is Unity with C#. 
+            I have already made a small start on Unreal Engine 5 with blueprints and Godot with Gd script. 
+            Furthermore, I already have a base with making models in Blender. 
+            When I finish this course I want to start making games made with passion. 
+            My goal is to find a company where I can work on games with an enthusiastic group. 
+            I also plan to make some small games myself and put them online to see how I can improve myself.
             <br><br> 
-            Ik woon samen met mijn ouders, broertje, kat en hond. 
-            Sinds ik een kind was heb ik altijd al zitten gamen met mijn familie. 
-            Het eerste console waar ik op heb gespeeld was de Playstation 2. 
-            Toen ging ik van Nintendo DS naar de WII en de Playstation 4. 
-            Een jaar geleden heb ik zelf een PC gekocht en in elkaar gezet. 
-            Ik heb een Havo diploma gehaald op Harens Lyceum en ben daarna terecht gekomen bij Noorderpoort waar ik nu studeer. 
+            I live with my parents, little brother, cat and dog. 
+            Since I was a kid I have always been gaming with my family. 
+            The first console I played on was the Playstation 2. 
+            Then I went from Nintendo DS to the WII and the Playstation 4. 
+            A year ago I bought and put together a PC myself. 
+            I got a Havo degree at Harens Lyceum and then ended up at Noorderpoort where I am now studying. 
           </h3>
       </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
