--- a/projecten.html
+++ b/projecten.html
@@ -62,7 +62,7 @@
                 <p class="card-text text-light">In 2023 heb ik meegedaan aan de Global Game Jam in Groningen samen met een paar klasgenoten.
                   Ik heb de achtergronden gemaakt samen met de vijand en zijn animaties.
                 </p>
-                <a href="ProjectBuilds/ScurryGGJ23.zip" class="btn btn-primary">Download Squirry</a>
+                <a href="ProjectBuilds/ScurryGGJ23.zip" class="btn btn-primary">Download Scurry</a>
               </div>
             </div>
         </div>
