--- a/projectenEn.html
+++ b/projectenEn.html
@@ -48,8 +48,8 @@
               <img src="PortfolioImg/raceGameScreenshot.png" class="card-img-top" alt="raceGameScreenshot">
               <div class="card-body">
                 <h5 class="card-title text-light">Race Game</h5>
-                <p class="card-text text-light">Voor mijn derde opdracht moest ik een race game maken waar je tegen AI kon racen. 
-                  Ik heb hierbij ook zelf models gemaakt in blender.</p>
+                <p class="card-text text-light">For my third assignment I had to make a racing game where you could race against AI. 
+                  I made my own models in blender.</p>
                 <a href="ProjectBuilds/Race-GameBuild.zip" class="btn btn-primary">Download Race Game</a>
               </div>
             </div>
@@ -59,10 +59,10 @@
               <img src="PortfolioImg/ScurryScreenshot.png" class="card-img-top" alt="pongScreenshot">
               <div class="card-body">
                 <h5 class="card-title text-light">Scurry</h5>
-                <p class="card-text text-light">In 2023 heb ik meegedaan aan de Global Game Jam in Groningen samen met een paar klasgenoten.
-                  Ik heb de achtergronden gemaakt samen met de vijand en zijn animaties.
+                <p class="card-text text-light">In 2023, I participated in the Global Game Jam in Groningen along with a few classmates. 
+                  I made the backgrounds along with the enemy and his animations.
                 </p>
-                <a href="ProjectBuilds/ScurryGGJ23.zip" class="btn btn-primary">Download Squirry</a>
+                <a href="ProjectBuilds/ScurryGGJ23.zip" class="btn btn-primary">Download Scurry</a>
               </div>
             </div>
         </div>
@@ -71,8 +71,8 @@
                   <img src="PortfolioImg/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
                   <div class="card-body">
                     <h5 class="card-title text-light">Pong</h5>
-                    <p class="card-text text-light">Pong was de eerste game die ik heb gemaakt tijdens mijn opleiding.
-                      Ik heb zelf de achtergrond gemaakt in Aseprite.
+                    <p class="card-text text-light">Pong was the first game I made during my studies. 
+                      I made the background myself in Aseprite.
                     </p>
                     <a href="ProjectBuilds/PongBuild.zip" class="btn btn-primary">Download Pong</a>
                   </div>
@@ -83,8 +83,8 @@
                   <img src="PortfolioImg/tankGameScreenshot.png" class="card-img-top" alt="tankGameScreenshot">
                   <div class="card-body">
                     <h5 class="card-title text-light">Tank Game</h5>
-                    <p class="card-text text-light">Voor mijn tweede opdracht moest ik een tank game maken waar je lokaal met twee spelers kon spelen.
-                      Ik heb hierbij ook alle sprites gemaakt in Aseprite.
+                    <p class="card-text text-light">For my second assignment I had to make a tank game where you could play locally with two players. 
+                      I also made all the sprites in Aseprite for this game.
                     </p>
                     <a href="ProjectBuilds/TankGameBuild.zip" class="btn btn-primary">Download Tank Game</a>
                   </div>
@@ -95,10 +95,10 @@
                   <img src="PortfolioImg/RTSScrnshot.png" class="card-img-top" alt="pongScreenshot">
                   <div class="card-body">
                     <h5 class="card-title text-light">RTS</h5>
-                    <p class="card-text text-light">Voor het tweede jaar begonnen we met het maken van een RTS in een groep. 
-                      Ik heb de code voor de soldiers geschreven wat jammer genoeg aan het einde omgeschreven moest worden. 
-                      Verder heb ik nog de models gemaakt voor de speler, vijanden en het barrack gebouw. 
-                      Deze models staan in de Blender tab.</p>
+                    <p class="card-text text-light">For the second year we started making an RTS in a group. 
+                      I wrote the code for the soldiers which unfortunately had to be rewritten at the end. 
+                      I also made the models for the player, enemies and the barrack building. 
+                      These models are in the Blender tab.</p>
                     <a href="ProjectBuilds/RTSBuild.zip" class="btn btn-primary">Download RTS</a>
                   </div>
                 </div>
@@ -108,9 +108,9 @@
                   <img src="PortfolioImg/TowerDefenceScreenshot.png" class="card-img-top" alt="pongScreenshot">
                   <div class="card-body">
                     <h5 class="card-title text-light">Tower Defence</h5>
-                    <p class="card-text text-light">De laatste opdracht van het eerste jaar was een tower defence maken samen met een groep.
-                      Ik heb de code gemaakt van de torens die kunnen schieten en de enemies volgen. 
-                      Ook heb ik de models van de toren met de kabouter en de schildpad vijand gemaakt.
+                    <p class="card-text text-light">The last assignment of the first year was to make a tower defense together with a group. 
+                      I made the code of the towers that made them shoot and follow the enemies. 
+                      I also made the models of the tower with the gnome and the turtle enemy.
                     </p>
                     <a href="ProjectBuilds/Tower-Defence.zip" class="btn btn-primary">Download Tower Defence</a>
                   </div>
@@ -122,8 +122,9 @@
                   <img src="PortfolioImg/LightenUpScaled.png" class="card-img-top" alt="pongScreenshot">
                   <div class="card-body">
                     <h5 class="card-title text-light">Lighten Up</h5>
-                    <p class="card-text text-light">In 2024 heb ik meegedaan aan de Global Game Jam in Groningen samen met een paar klasgenoten.
-                      Hierbij heb ik bijna alle sprites en animaties gemaakt. Hieronder een kleine preview van mijn animaties. 
+                    <p class="card-text text-light">In 2024 I participated in the Global Game Jam in Groningen together with some classmates. 
+                      During this I made almost all the sprites and animations. 
+                      Below is a small preview of my animations.  
                     </p>
                     <a href="PorfolioVids/GGJ2024.mp4" class="btn btn-primary">Lighten Up Video</a>
                   </div>
@@ -133,10 +134,10 @@
                 <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
                   <img src="PortfolioImg/UnrealKeuzedeelScreenshot.png" class="card-img-top" alt="UnrealScreenshot">
                   <div class="card-body">
-                    <h5 class="card-title text-light">Unreal Keuzedeel</h5>
-                    <p class="card-text text-light">Voor mijn verdieping keuzedeel heb ik ervoor gekozen om in Unreal Engine 5 een klein doolhof te maken 
-                      waar je drie knoppen moet vinden om de deur naar het einde te openen.
-                      Terwijl je deze knoppen aan het zoeken was zat er ook een vijand achter je aan.
+                    <h5 class="card-title text-light">Unreal Elective</h5>
+                    <p class="card-text text-light">For my floor elective, I chose to create a small maze in Unreal Engine 5 
+                      where you had to find three buttons to open the door to the end. 
+                      While you were searching for these buttons there was also an enemy chasing you.
                     </p>
                     <a href="https://marlies-boop.itch.io/unreal-maze-game" class="btn btn-primary">Download Unreal Keuzedeel</a>
                   </div>
