--- a/blenderEn.html
+++ b/blenderEn.html
@@ -1,126 +1,129 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body class="bg-dark">
-    <nav class="navbar navbar-expand-lg bg-info">
-        <div class="container">
-          <a class="navbar-brand logo" href="indexEn.html">Marlies Kuipers</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="projectenEn.html">Projects</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="blenderEn.html">Blender</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="overmijEn.html">About me</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contactEn.html">Contact</a>
-              </li>
-            </ul>
-          </div>
-          <div class="vlag">
-            <a href="blender.html">
-            <img src="PortfolioImg/NederlandseVlag.png" alt="NederlandseVlag" height="40" width="60">
-            </a>
-          </div>
-        </div>
-      </nav>
 
-      <center>
-        <div class="containerd p-4">
-        <h1 class="text-light">Blender</h1>
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2 g-4">
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Portfolio</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+	<link rel="stylesheet" href="style.css">
+</head>
 
-          <div class="col">
-            <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-              <img src="PortfolioBlenderImg/AxeNPGJ.png" class="card-img-top" alt="NPGJAxe">
-              <div class="card-body">
-                <h5 class="card-title text-light">NPGJ Axe</h5>
-                <p class="card-text text-light">During Noorderpoort's Game Jam, I made this axe.
-                </p>
-              </div>
-            </div>
-          </div>
+<body class="bg-dark">
+	<nav class="navbar navbar-expand-lg bg-info">
+		<div class="container">
+			<a class="navbar-brand logo" href="indexEn.html">Marlies Kuipers</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+				aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" href="projectenEn.html">Projects</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="blenderEn.html">Blender</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="overmijEn.html">About me</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="contactEn.html">Contact</a>
+					</li>
+				</ul>
+			</div>
+			<div class="vlag">
+				<a href="blender.html">
+					<img src="PortfolioImg/NederlandseVlag.png" alt="NederlandseVlag" height="40" width="60">
+				</a>
+			</div>
+		</div>
+	</nav>
+	
+	<h1 class="text-light text-center m-5">Blender</h1>
+	<div class="container d-flex justify-content-center">
+		<div class="row">
+			<div class="col-md-6 pe-5">
+				<div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+					<img src="PortfolioBlenderImg/AxeNPGJ.png" class="card-img-top" alt="NPGJAxe">
+					<div class="card-body">
+						<h5 class="card-title text-light">NPGJ Axe</h5>
+						<p class="card-text text-light">During Noorderpoort's Game Jam, I made this axe.
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-6 ps-5">
+				<div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+					<video controls loop>
+						<source src="PortfolioBlenderImg/RTSModelAnimations.mp4" type="video/mp4">
+					</video>
+					<div class="card-body">
+						<h5 class="card-title text-light">RTS models</h5>
+						<p class="card-text text-light">In the RTS I made with my group.
+							I made all the player and enemy models in blender. I got the animations from Mixamo.
+						</p>
+					</div>
+				</div>
+			</div>
+			<!-- <div class="row">
+				<div class="col-md-6">
+					<div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+						<img src="PortfolioBlenderImg/NGJSpeler.png" class="card-img-top" alt="NPGJSpeler">
+						<div class="card-body">
+							<h5 class="card-title text-light">NPGJ Player</h5>
+							<p class="card-text text-light">We had a little Game Jam where the first and second graders
+								got
+								to work together.
+								I provided this player model.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+						<img src="PortfolioBlenderImg/RaceCar.png" class="card-img-top" alt="blenderRaceCar">
+						<div class="card-body">
+							<h5 class="card-title text-light">Race car</h5>
+							<p class="card-text text-light">One of my first models I made was this race car.
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-6">
+					<div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+						<img src="PortfolioBlenderImg/KabouterTD.png" class="card-img-top" alt="KabouterTD">
+						<div class="card-body">
+							<h5 class="card-title text-light">Gnome Tower Defence</h5>
+							<p class="card-text text-light">For our tower defense, we each had to make a tower.
+								My group had chosen to go with a gnome theme.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+						<img src="PortfolioBlenderImg/TowersTD.png" class="card-img-top" alt="TowersTD">
+						<div class="card-body">
+							<h5 class="card-title text-light">Towers Tower Defence</h5>
+							<p class="card-text text-light">These are my towers. Each tower had to have 3 levels.</p>
+						</div>
+					</div>
+				</div>
+			</div> -->
+		</div>
+	</div>
 
-          <div class="col">
-            <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-              <video controls loop>
-                <source src="PortfolioBlenderImg/RTSModelAnimations.mp4" type="video/mp4">
-              </video>
-              <div class="card-body">
-                <h5 class="card-title text-light">RTS models</h5>
-                <p class="card-text text-light">In the RTS I made with my group.
-                  I made all the player and enemy models in blender. I got the animations from Mixamo.                  
-                </p>
-              </div>
-            </div>
-        </div>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+		crossorigin="anonymous"></script>
+</body>
 
-          <div class="col">
-            <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-                <img src="PortfolioBlenderImg/NGJSpeler.png" class="card-img-top" alt="NPGJSpeler">
-                <div class="card-body">
-                  <h5 class="card-title text-light">NPGJ Player</h5>
-                  <p class="card-text text-light">We had a little Game Jam where the first and second graders got to work together. 
-                    I provided this player model. 
-                  </p>
-                </div>
-              </div>
-          </div>
-
-            <div class="col">
-                <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-                  <img src="PortfolioBlenderImg/RaceCar.png" class="card-img-top" alt="blenderRaceCar">
-                  <div class="card-body">
-                    <h5 class="card-title text-light">Race car</h5>
-                    <p class="card-text text-light">One of my first models I made was this race car.
-                    </p>
-                  </div>
-                </div>
-            </div>
-
-            <div class="col">
-                <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-                  <img src="PortfolioBlenderImg/KabouterTD.png" class="card-img-top" alt="KabouterTD">
-                  <div class="card-body">
-                    <h5 class="card-title text-light">Gnome Tower Defence</h5>
-                    <p class="card-text text-light">For our tower defense, we each had to make a tower.
-                      My group had chosen to go with a gnome theme.
-                      </p>
-                  </div>
-                </div>
-            </div>
-
-            <div class="col">
-                <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-                  <img src="PortfolioBlenderImg/TowersTD.png" class="card-img-top" alt="TowersTD">
-                  <div class="card-body">
-                    <h5 class="card-title text-light">Towers Tower Defence</h5>
-                    <p class="card-text text-light">These are my towers. Each tower had to have 3 levels.</p>
-                  </div>
-                </div>
-            </div>
-
-            </div>
-          </div>
-        </center>
-          
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  </body>
 </html>
