--- a/overmijEn.html
+++ b/overmijEn.html
@@ -42,8 +42,8 @@
       </nav>
 
       <div class="container p-4">
-        <h1 class="text-light text-center">About me</h1>
-        <h3  class="text-light text-center">
+        <h1 class="text-light">About me</h1>
+        <h3  class="text-light">
           <div class="container-aboutme">
             <div class="text">
               Hello, my name is Marlies. <br>
