--- a/blender.html
+++ b/blender.html
@@ -1,117 +1,149 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body class="bg-dark">
     <nav class="navbar navbar-expand-lg bg-info">
-        <div class="container">
-          <a class="navbar-brand logo" href="index.html">Marlies Kuipers</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="projecten.html">Projecten</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="blender.html">Blender</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="overmij.html">Over mij</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-              </li>
-            </ul>
-          </div>
-          <div class="vlag">
-            <a href="blenderEn.html">
-            <img src="PortfolioImg/EngelseVlag.png" alt="EngelseVlag" height="40" width="60">
-            </a>
-          </div>
+      <div class="container">
+        <a class="navbar-brand logo" href="index.html">Marlies Kuipers</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="projecten.html">Projecten</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="blender.html">Blender</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="overmij.html">Over mij</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
         </div>
-      </nav>
+        <div class="vlag">
+          <a href="blenderEn.html">
+            <img
+              src="PortfolioImg/EngelseVlag.png"
+              alt="EngelseVlag"
+              height="40"
+              width="60"
+            />
+          </a>
+        </div>
+      </div>
+    </nav>
 
-      <center>
-        <div class="containerd p-4">
-          <h1 class="text-light">Blender</h1>
-            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2 g-4">
-              <div class="col">
-                <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-                  <img src="PortfolioBlenderImg/AxeNPGJ.png" class="card-img-top" alt="NPGJAxe">
-                  <div class="card-body">
-                    <h5 class="card-title text-light">NPGJ Bijl</h5>
-                    <p class="card-text text-light">Tijdens de Game Jam van Noorderpoort heb ik ook deze bijl gemaakt.
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-                  <video controls loop>
-                    <source src="PortfolioBlenderImg/RTSModelAnimations.mp4" type="video/mp4">
-                  </video>
-                  <div class="card-body">
-                    <h5 class="card-title text-light">RTS modellen</h5>
-                    <p class="card-text text-light">In de RTS die ik met mijn groep heb gemaakt.
-                       heb ik alle models van de speler en vijand gemaakt in blender. De animaties heb ik van Mixamo afgehaald.
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-                    <img src="PortfolioBlenderImg/NGJSpeler.png" class="card-img-top" alt="NPGJSpeler">
-                    <div class="card-body">
-                      <h5 class="card-title text-light">NPGJ Speler</h5>
-                      <p class="card-text text-light">Wij hadden een kleine Game Jam waarbij de eerste en tweede klassers samen gingen werken.
-                         Ik heb voor deze speler model gezorgd. 
-                      </p>
-                    </div>
-                  </div>
-              </div>
-              <div class="col">
-                  <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-                    <img src="PortfolioBlenderImg/RaceCar.png" class="card-img-top" alt="blenderRaceCar">
-                    <div class="card-body">
-                      <h5 class="card-title text-light">Race auto</h5>
-                      <p class="card-text text-light">Een van mijn eerste models die ik gemaakt heb is deze race auto.
-                      </p>
-                    </div>
-                  </div>
-              </div>
-              <div class="col">
-                  <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-                    <img src="PortfolioBlenderImg/KabouterTD.png" class="card-img-top" alt="KabouterTD">
-                    <div class="card-body">
-                      <h5 class="card-title text-light">Kabouter Tower Defence</h5>
-                      <p class="card-text text-light">Voor onze tower defence moesten we ieder een toren maken.
-                         Mijn groep had ervoor gekozen om met een kabouter thema te gaan.</p>
-                    </div>
-                  </div>
-              </div>
-              <div class="col">
-                  <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-                    <img src="PortfolioBlenderImg/TowersTD.png" class="card-img-top" alt="TowersTD">
-                    <div class="card-body">
-                      <h5 class="card-title text-light">Torens Tower Defence</h5>
-                      <p class="card-text text-light">Dit zijn mijn torens. Elke toren moest 3 levels hebben.</p>
-                    </div>
-                  </div>
-              </div>
-            </div>
-          </div>
-        </center>     
+    <h1 class="text-light text-center m-5">Blender</h1>
+	<div class="container d-flex justify-content-center">
+		<div class="row">
+			<div class="row">
+				<div class="col-md-7 p-4">
+					<div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+						<img src="PortfolioBlenderImg/AxeNPGJ.png" class="card-img-top" alt="NPGJAxe">
+						<div class="card-body">
+							<h5 class="card-title text-light">NPGJ Bijl</h5>
+							<p class="card-text text-light">Tijdens de Game Jam van Noorderpoort heb ik ook deze bijl
+                gemaakt.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-5 p-4">
+					<div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+						<video controls loop>
+							<source src="PortfolioBlenderImg/RTSModelAnimations.mp4" type="video/mp4">
+						</video>
+						<div class="card-body">
+							<h5 class="card-title text-light">RTS modellen</h5>
+							<p class="card-text text-light">In de RTS die ik met mijn groep heb gemaakt. heb ik alle models
+                van de speler en vijand gemaakt in blender. De animaties heb ik
+                van Mixamo afgehaald.
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-7 p-4">
+					<div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+						<img src="PortfolioBlenderImg/NGJSpeler.png" class="card-img-top" alt="NPGJSpeler">
+						<div class="card-body">
+							<h5 class="card-title text-light">NPGJ Speler</h5>
+							<p class="card-text text-light">Wij hadden een kleine Game Jam waarbij de eerste en tweede
+                klassers samen gingen werken. Ik heb voor deze speler model
+                gezorgd.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-5 p-4">
+					<div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+						<img src="PortfolioBlenderImg/RaceCar.png" class="card-img-top" alt="blenderRaceCar">
+						<div class="card-body">
+							<h5 class="card-title text-light">Race auto</h5>
+							<p class="card-text text-light">Een van mijn eerste models die ik gemaakt heb is deze race auto.
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-7 p-4">
+					<div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+						<img src="PortfolioBlenderImg/KabouterTD.png" class="card-img-top" alt="KabouterTD">
+						<div class="card-body">
+							<h5 class="card-title text-light">Kabouter Tower Defence</h5>
+							<p class="card-text text-light">Voor onze tower defence moesten we ieder een toren maken. Mijn
+                groep had ervoor gekozen om met een kabouter thema te gaan.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-5 p-4">
+					<div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+						<img src="PortfolioBlenderImg/TowersTD.png" class="card-img-top" alt="TowersTD">
+						<div class="card-body">
+							<h5 class="card-title text-light">Torens Tower Defence</h5>
+							<p class="card-text text-light">Dit zijn mijn torens. Elke toren moest 3 levels hebben.</p>
+						</div>
+					</div>
+				</div>
+			</div> 
+	</div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
