--- a/blenderEn.html
+++ b/blenderEn.html
@@ -48,31 +48,33 @@
 	<h1 class="text-light text-center m-5">Blender</h1>
 	<div class="container d-flex justify-content-center">
 		<div class="row">
-			<div class="col-md-6 pe-5">
-				<div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-					<img src="PortfolioBlenderImg/AxeNPGJ.png" class="card-img-top" alt="NPGJAxe">
-					<div class="card-body">
-						<h5 class="card-title text-light">NPGJ Axe</h5>
-						<p class="card-text text-light">During Noorderpoort's Game Jam, I made this axe.
-						</p>
+			<div class="row">
+				<div class="col-md-7 p-4">
+					<div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+						<img src="PortfolioBlenderImg/AxeNPGJ.png" class="card-img-top" alt="NPGJAxe">
+						<div class="card-body">
+							<h5 class="card-title text-light">NPGJ Axe</h5>
+							<p class="card-text text-light">During Noorderpoort's Game Jam, I made this axe.
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-5 p-4">
+					<div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+						<video controls loop>
+							<source src="PortfolioBlenderImg/RTSModelAnimations.mp4" type="video/mp4">
+						</video>
+						<div class="card-body">
+							<h5 class="card-title text-light">RTS models</h5>
+							<p class="card-text text-light">In the RTS I made with my group.
+								I made all the player and enemy models in blender. I got the animations from Mixamo.
+							</p>
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="col-md-6 ps-5">
-				<div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-					<video controls loop>
-						<source src="PortfolioBlenderImg/RTSModelAnimations.mp4" type="video/mp4">
-					</video>
-					<div class="card-body">
-						<h5 class="card-title text-light">RTS models</h5>
-						<p class="card-text text-light">In the RTS I made with my group.
-							I made all the player and enemy models in blender. I got the animations from Mixamo.
-						</p>
-					</div>
-				</div>
-			</div>
-			<!-- <div class="row">
-				<div class="col-md-6">
+			<div class="row">
+				<div class="col-md-7 p-4">
 					<div class="card h-100 text-center bg-secondary" style="width: 30rem;">
 						<img src="PortfolioBlenderImg/NGJSpeler.png" class="card-img-top" alt="NPGJSpeler">
 						<div class="card-body">
@@ -85,7 +87,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-6">
+				<div class="col-md-5 p-4">
 					<div class="card h-100 text-center bg-secondary" style="width: 30rem;">
 						<img src="PortfolioBlenderImg/RaceCar.png" class="card-img-top" alt="blenderRaceCar">
 						<div class="card-body">
@@ -97,7 +99,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-6">
+				<div class="col-md-7 p-4">
 					<div class="card h-100 text-center bg-secondary" style="width: 30rem;">
 						<img src="PortfolioBlenderImg/KabouterTD.png" class="card-img-top" alt="KabouterTD">
 						<div class="card-body">
@@ -108,7 +110,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-md-6">
+				<div class="col-md-5 p-4">
 					<div class="card h-100 text-center bg-secondary" style="width: 30rem;">
 						<img src="PortfolioBlenderImg/TowersTD.png" class="card-img-top" alt="TowersTD">
 						<div class="card-body">
@@ -117,8 +119,8 @@
 						</div>
 					</div>
 				</div>
-			</div> -->
-		</div>
+			</div> 
+		
 	</div>
 
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
