--- a/projecten.html
+++ b/projecten.html
@@ -1,50 +1,71 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body class="bg-dark">
     <nav class="navbar navbar-expand-lg bg-info">
-        <div class="container">
-          <a class="navbar-brand logo" href="index.html">Marlies Kuipers</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="projecten.html">Projecten</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="blender.html">Blender</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="overmij.html">Over mij</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-              </li>
-            </ul>
-          </div>
-          <div class="vlag">
-            <a href="projectenEn.html">
-            <img src="PortfolioImg/EngelseVlag.png" alt="EngelseVlag" height="40" width="60">
-            </a>
-          </div>
+      <div class="container">
+        <a class="navbar-brand logo" href="index.html">Marlies Kuipers</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="projecten.html">Projecten</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="blender.html">Blender</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="overmij.html">Over mij</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
         </div>
-      </nav>
+        <div class="vlag">
+          <a href="projectenEn.html">
+            <img
+              src="PortfolioImg/EngelseVlag.png"
+              alt="EngelseVlag"
+              height="40"
+              width="60"
+            />
+          </a>
+        </div>
+      </div>
+    </nav>
 
-      <center>
-      <div class="container p-4">
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2 g-4">
-          <div class="col">
+    <div class="container d-flex justify-content-center">
+      <div class="row">
+        <div class="row">
+          <div class="col-md-7 p-4">
             <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
               <img src="PortfolioImg/raceGameScreenshot.png" class="card-img-top" alt="raceGameScreenshot">
               <div class="card-body">
@@ -55,7 +76,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-md-5 p-4">
             <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
               <img src="PortfolioImg/ScurryScreenshot.png" class="card-img-top" alt="pongScreenshot">
                 <div class="card-body">
@@ -67,7 +88,9 @@
                 </div>
             </div>
           </div>
-          <div class="col">
+        </div>
+        <div class="row">
+          <div class="col-md-7 p-4">
             <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
               <img src="PortfolioImg/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
                 <div class="card-body">
@@ -79,7 +102,7 @@
                 </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-md-5 p-4">
             <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
               <img src="PortfolioImg/tankGameScreenshot.png" class="card-img-top" alt="tankGameScreenshot">
                 <div class="card-body">
@@ -90,8 +113,10 @@
                   <a href="ProjectBuilds/TankGameBuild.zip" class="btn btn-primary">Download Tank Game</a>
                 </div>
             </div>
-          </div>          
-          <div class="col">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-7 p-4">
             <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
               <img src="PortfolioImg/RTSScrnshot.png" class="card-img-top" alt="pongScreenshot">
                 <div class="card-body">
@@ -104,20 +129,7 @@
                 </div>
             </div>
           </div>
-          <div class="col">
-            <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-              <img src="PortfolioImg/TowerDefenceScreenshot.png" class="card-img-top" alt="pongScreenshot">
-                <div class="card-body">
-                  <h5 class="card-title text-light">Tower Defence</h5>
-                  <p class="card-text text-light">De laatste opdracht van het eerste jaar was een tower defence maken samen met een groep.
-                    Ik heb de code gemaakt van de torens die kunnen schieten en de enemies volgen. 
-                    Ook heb ik de models van de toren met de kabouter en de schildpad vijand gemaakt.
-                  </p>
-                  <a href="ProjectBuilds/Tower-Defence.zip" class="btn btn-primary">Download Tower Defence</a>
-                </div>
-            </div>
-          </div>      
-          <div class="col">
+          <div class="col-md-5 p-4">
             <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
               <img src="PortfolioImg/LightenUpScaled.png" class="card-img-top" alt="pongScreenshot">
                 <div class="card-body">
@@ -129,7 +141,22 @@
                 </div>
             </div>
           </div>
-          <div class="col">
+        </div> 
+        <div class="row">
+          <div class="col-md-7 p-4">
+            <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+              <img src="PortfolioImg/TowerDefenceScreenshot.png" class="card-img-top" alt="pongScreenshot">
+                <div class="card-body">
+                  <h5 class="card-title text-light">Tower Defence</h5>
+                  <p class="card-text text-light">De laatste opdracht van het eerste jaar was een tower defence maken samen met een groep.
+                    Ik heb de code gemaakt van de torens die kunnen schieten en de enemies volgen. 
+                    Ook heb ik de models van de toren met de kabouter en de schildpad vijand gemaakt.
+                  </p>
+                  <a href="ProjectBuilds/Tower-Defence.zip" class="btn btn-primary">Download Tower Defence</a>
+                </div>
+            </div>
+          </div>
+          <div class="col-md-5 p-4">
             <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
               <img src="PortfolioImg/UnrealKeuzedeelScreenshot.png" class="card-img-top" alt="UnrealScreenshot">
                 <div class="card-body">
@@ -142,9 +169,13 @@
                 </div>
             </div>
           </div>
-        </div>
-      </div>
-    </center> 
-          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+        </div> 
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
