--- a/overmij.html
+++ b/overmij.html
@@ -1,76 +1,104 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body class="bg-dark">
-    <nav class="navbar navbar-expand-lg bg-info">
-        <div class="container">
-          <a class="navbar-brand logo" href="index.html">Marlies Kuipers</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="projecten.html">Projecten</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="blender.html">Blender</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="overmij.html">Over mij</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
-              </li>
-            </ul>
-          </div>
-          <div class="vlag">
-            <a href="overmijEn.html">
-            <img src="PortfolioImg/EngelseVlag.png" alt="EngelseVlag" height="40" width="60">
-            </a>
-          </div>
-        </div>
-      </nav>
 
-      <div class="container p-4">
-        <h1 class="text-light text-center">Over mij</h1>
-        <h3  class="text-light text-center">
-          <div class="container-aboutme">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Portfolio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body class="bg-dark">
+  <nav class="navbar navbar-expand-lg bg-info">
+    <div class="container">
+      <a class="navbar-brand logo" href="index.html">Marlies Kuipers</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="projecten.html">Projecten</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="blender.html">Blender</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="overmij.html">Over mij</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+      <div class="vlag">
+        <a href="overmijEn.html">
+          <img src="PortfolioImg/EngelseVlag.png" alt="EngelseVlag" height="40" width="60">
+        </a>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container p-4">
+    <div class="row">
+      <div class="row">
+        <div class="col-8">
+          <h1 class="text-light">About me</h1>
+          <h3 class="text-light">
             <div class="text">
               Hallo, mijn naam is Marlies. <br>
               Op dit moment zit ik in mijn tweede jaar Software Game Development op Noorderpoort in Groningen.
-              Ik heb 6 projecten gemaakt en ben bezig met een zelfgemaakte VR game op dit moment. 
-              Ook heb ik meegedaan aan de Global Game Jam van 2023 en 2024 in Groningen samen met een paar klasgenoten.  
+              Ik heb 6 projecten gemaakt en ben bezig met een zelfgemaakte VR game op dit moment.
+              Ook heb ik meegedaan aan de Global Game Jam van 2023 en 2024 in Groningen samen met een paar klasgenoten.
             </div>
-            <div class="img">
-              <img src="PortfolioImg/PortfolioAboutMeFotoCropped.jpg" alt="MijnHoofd" height="300px" width="300px">
-            </div>
+          </H3>
+        </div>
+        <div class="col-4">
+          <div class="img">
+            <img src="PortfolioImg/PortfolioAboutMeFotoCropped.jpg" alt="MijnHoofd" height="300px" width="300px">
           </div>
-            <br><br> 
-            Het programma wat ik nu het meeste gebruik is Unity met C#. 
-            Ik heb al een klein begin gemaakt aan Unreal Engine 5 met blueprints en Godot met Gd script. 
-            Verder heb ik al een basis met het maken van modellen in Blender. 
-            Wanneer ik klaar ben met deze opleiding wil ik games gaan maken die met passie gemaakt zijn. 
-            Mijn goal is om een bedrijf te vinden waar ik met een enthousiaste groep kan werken aan games. 
-            Ik ben ook nog van plan om zelf wat kleine games te maken en online te zetten om te zien hoe ik mezelf kan verbeteren.
-            <br><br> 
-            Ik woon samen met mijn ouders, broertje, kat en hond. 
-            Sinds ik een kind was heb ik altijd al zitten gamen met mijn familie. 
-            Het eerste console waar ik op heb gespeeld was de Playstation 2. 
-            Toen ging ik van Nintendo DS naar de WII en de Playstation 4. 
-            Een jaar geleden heb ik zelf een PC gekocht en in elkaar gezet. 
-            Ik heb een Havo diploma gehaald op Harens Lyceum en ben daarna terecht gekomen bij Noorderpoort waar ik nu studeer. 
-          </h3>
+        </div>
       </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  </body>
+      <div class="row my-5">
+        <h3 class="text-light">
+          Het programma wat ik nu het meeste gebruik is Unity met C#.
+          Ik heb al een klein begin gemaakt aan Unreal Engine 5 met blueprints en Godot met Gd script.
+          Verder heb ik al een basis met het maken van modellen in Blender.
+          Wanneer ik klaar ben met deze opleiding wil ik games gaan maken die met passie gemaakt zijn.
+          Mijn goal is om een bedrijf te vinden waar ik met een enthousiaste groep kan werken aan games.
+          Ik ben ook nog van plan om zelf wat kleine games te maken en online te zetten om te zien hoe ik mezelf kan
+          verbeteren.
+        </h3>
+      </div>
+      <div class="row">
+        <div class="col-8">
+          <h3 class="text-light">
+            Ik woon samen met mijn ouders, broertje, kat en hond.
+            Sinds ik een kind was heb ik altijd al zitten gamen met mijn familie.
+            Het eerste console waar ik op heb gespeeld was de Playstation 2.
+            Toen ging ik van Nintendo DS naar de WII en de Playstation 4.
+            Een jaar geleden heb ik zelf een PC gekocht en in elkaar gezet.
+            Ik heb een Havo diploma gehaald op Harens Lyceum en ben daarna terecht gekomen bij Noorderpoort waar ik nu
+            studeer.
+          </h3>
+        </div>
+        <div class="col">
+          <img src="PortfolioImg/MikeyFoto.jpg" alt="MikeyFoto" height="275px" width="250px">
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
