--- a/overmijEn.html
+++ b/overmijEn.html
@@ -1,76 +1,102 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body class="bg-dark">
-    <nav class="navbar navbar-expand-lg bg-info">
-        <div class="container">
-          <a class="navbar-brand logo" href="indexEn.html">Marlies Kuipers</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="projectenEn.html">Projects</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="blenderEn.html">Blender</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="overmijEn.html">About me</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contactEn.html">Contact</a>
-              </li>
-            </ul>
-          </div>
-          <div class="vlag">
-            <a href="overmij.html">
-              <img src="PortfolioImg/NederlandseVlag.png" alt="NederlandseVlag" height="40" width="60">
-            </a>
-          </div>
-        </div>
-      </nav>
 
-      <div class="container p-4">
-        <h1 class="text-light">About me</h1>
-        <h3  class="text-light">
-          <div class="container-aboutme">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Portfolio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body class="bg-dark">
+  <nav class="navbar navbar-expand-lg bg-info">
+    <div class="container">
+      <a class="navbar-brand logo" href="indexEn.html">Marlies Kuipers</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="projectenEn.html">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="blenderEn.html">Blender</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="overmijEn.html">About me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contactEn.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+      <div class="vlag">
+        <a href="overmij.html">
+          <img src="PortfolioImg/NederlandseVlag.png" alt="NederlandseVlag" height="40" width="60">
+        </a>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container p-4">
+    <div class="row">
+      <div class="row">
+        <div class="col-8">
+          <h1 class="text-light">About me</h1>
+          <h3 class="text-light">
             <div class="text">
               Hello, my name is Marlies. <br>
-              I am currently in my second year of Software Game Development at Noorderpoort in Groningen. 
-              I have created 6 projects and am working on a homemade VR game at the moment. 
-              I also participated in the 2023 and 2024 Global Game Jam in Groningen together with some classmates.  
+              I am currently in my second year of Software Game Development at Noorderpoort in Groningen.
+              I have created 6 projects and am working on a homemade VR game at the moment.
+              I also participated in the 2023 and 2024 Global Game Jam in Groningen together with some classmates.
             </div>
-            <div class="img">
-              <img src="PortfolioImg/PortfolioAboutMeFotoCropped.jpg" alt="MijnHoofd" height="300px" width="300px">
-            </div>
+          </H3>
+        </div>
+        <div class="col-4">
+          <div class="img">
+            <img src="PortfolioImg/PortfolioAboutMeFotoCropped.jpg" alt="MijnHoofd" height="300px" width="300px">
           </div>
-            <br><br> 
-            The program I use most now is Unity with C#. 
-            I have already made a small start on Unreal Engine 5 with blueprints and Godot with Gd script. 
-            Furthermore, I already have a base with making models in Blender. 
-            When I finish this course I want to start making games made with passion. 
-            My goal is to find a company where I can work on games with an enthusiastic group. 
-            I also plan to make some small games myself and put them online to see how I can improve myself.
-            <br><br> 
-            I live with my parents, little brother, cat and dog. 
-            Since I was a kid I have always been gaming with my family. 
-            The first console I played on was the Playstation 2. 
-            Then I went from Nintendo DS to the WII and the Playstation 4. 
-            A year ago I bought and put together a PC myself. 
-            I got a Havo degree at Harens Lyceum and then ended up at Noorderpoort where I am now studying. 
-          </h3>
+        </div>
       </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  </body>
+      <div class="row my-5">
+        <h3 class="text-light">
+          The program I use most now is Unity with C#.
+          I have already made a small start on Unreal Engine 5 with blueprints and Godot with Gd script.
+          Furthermore, I already have a base with making models in Blender.
+          When I finish this course I want to start making games made with passion.
+          My goal is to find a company where I can work on games with an enthusiastic group.
+          I also plan to make some small games myself and put them online to see how I can improve myself.
+        </h3>
+      </div>
+      <div class="row">
+        <div class="col-8">
+          <h3 class="text-light">
+            I live with my parents, little brother, cat and dog.
+            Since I was a kid I have always been gaming with my family.
+            The first console I played on was the Playstation 2.
+            Then I went from Nintendo DS to the WII and the Playstation 4.
+            A year ago I bought and put together a PC myself.
+            I got a Havo degree at Harens Lyceum and then ended up at Noorderpoort where I am now studying.
+          </h3>
+        </div>
+        <div class="col">
+          <img src="PortfolioImg/MikeyFoto.jpg" alt="MikeyFoto" height="275px" width="250px">
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
