--- a/projecten.html
+++ b/projecten.html
@@ -1,181 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body class="bg-dark">
-    <nav class="navbar navbar-expand-lg bg-info">
-      <div class="container">
-        <a class="navbar-brand logo" href="index.html">Marlies Kuipers</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="projecten.html">Projecten</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="blender.html">Blender</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="overmij.html">Over mij</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-          </ul>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Portfolio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body class="bg-dark">
+  <nav class="navbar navbar-expand-lg bg-info">
+    <div class="container">
+      <a class="navbar-brand logo" href="index.html">Marlies Kuipers</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="projecten.html">Projecten</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="blender.html">Blender</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="overmij.html">Over mij</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+      <div class="vlag">
+        <a href="projectenEn.html">
+          <img src="PortfolioImg/EngelseVlag.png" alt="EngelseVlag" height="40" width="60" />
+        </a>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container d-flex justify-content-center">
+    <div class="row">
+      <div class="row">
+        <div class="col-md-7 p-4">
+          <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+            <img src="PortfolioImg/raceGameScreenshot.png" class="card-img-top" alt="raceGameScreenshot">
+            <div class="card-body">
+              <h5 class="card-title text-light">Race Game</h5>
+              <p class="card-text text-light">Voor mijn derde opdracht moest ik een race game maken waar je tegen AI kon
+                racen.
+                Ik heb hierbij ook zelf models gemaakt in blender.</p>
+              <a href="ProjectBuilds/Race-GameBuild.zip" class="btn btn-primary">Download Race Game</a>
+            </div>
+          </div>
         </div>
-        <div class="vlag">
-          <a href="projectenEn.html">
-            <img
-              src="PortfolioImg/EngelseVlag.png"
-              alt="EngelseVlag"
-              height="40"
-              width="60"
-            />
-          </a>
+        <div class="col-md-5 p-4">
+          <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+            <img src="PortfolioImg/ScurryScreenshot.png" class="card-img-top" alt="pongScreenshot">
+            <div class="card-body">
+              <h5 class="card-title text-light">Scurry</h5>
+              <p class="card-text text-light">In 2023 heb ik meegedaan aan de Global Game Jam in Groningen samen met een
+                paar klasgenoten.
+                Ik heb de achtergronden gemaakt samen met de vijand en zijn animaties.
+              </p>
+              <a href="ProjectBuilds/ScurryGGJ23.zip" class="btn btn-primary">Download Scurry</a>
+            </div>
+          </div>
         </div>
       </div>
-    </nav>
-
-    <div class="container d-flex justify-content-center">
       <div class="row">
-        <div class="row">
-          <div class="col-md-7 p-4">
-            <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-              <img src="PortfolioImg/raceGameScreenshot.png" class="card-img-top" alt="raceGameScreenshot">
-              <div class="card-body">
-                <h5 class="card-title text-light">Race Game</h5>
-                <p class="card-text text-light">Voor mijn derde opdracht moest ik een race game maken waar je tegen AI kon racen. 
-                  Ik heb hierbij ook zelf models gemaakt in blender.</p>
-                <a href="ProjectBuilds/Race-GameBuild.zip" class="btn btn-primary">Download Race Game</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-5 p-4">
-            <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-              <img src="PortfolioImg/ScurryScreenshot.png" class="card-img-top" alt="pongScreenshot">
-                <div class="card-body">
-                  <h5 class="card-title text-light">Scurry</h5>
-                  <p class="card-text text-light">In 2023 heb ik meegedaan aan de Global Game Jam in Groningen samen met een paar klasgenoten.
-                    Ik heb de achtergronden gemaakt samen met de vijand en zijn animaties.
-                  </p>
-                  <a href="ProjectBuilds/ScurryGGJ23.zip" class="btn btn-primary">Download Scurry</a>
-                </div>
+        <div class="col-md-7 p-4">
+          <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+            <img src="PortfolioImg/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
+            <div class="card-body">
+              <h5 class="card-title text-light">Pong</h5>
+              <p class="card-text text-light">Pong was de eerste game die ik heb gemaakt tijdens mijn opleiding.
+                Ik heb zelf de achtergrond gemaakt in Aseprite.
+              </p>
+              <a href="ProjectBuilds/PongBuild.zip" class="btn btn-primary">Download Pong</a>
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-7 p-4">
-            <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-              <img src="PortfolioImg/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
-                <div class="card-body">
-                  <h5 class="card-title text-light">Pong</h5>
-                  <p class="card-text text-light">Pong was de eerste game die ik heb gemaakt tijdens mijn opleiding.
-                    Ik heb zelf de achtergrond gemaakt in Aseprite.
-                  </p>
-                  <a href="ProjectBuilds/PongBuild.zip" class="btn btn-primary">Download Pong</a>
-                </div>
-            </div>
-          </div>
-          <div class="col-md-5 p-4">
-            <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-              <img src="PortfolioImg/tankGameScreenshot.png" class="card-img-top" alt="tankGameScreenshot">
-                <div class="card-body">
-                  <h5 class="card-title text-light">Tank Game</h5>
-                  <p class="card-text text-light">Voor mijn tweede opdracht moest ik een tank game maken waar je lokaal met twee spelers kon spelen.
-                    Ik heb hierbij ook alle sprites gemaakt in Aseprite.
-                  </p>
-                  <a href="ProjectBuilds/TankGameBuild.zip" class="btn btn-primary">Download Tank Game</a>
-                </div>
+        <div class="col-md-5 p-4">
+          <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+            <img src="PortfolioImg/tankGameScreenshot.png" class="card-img-top" alt="tankGameScreenshot">
+            <div class="card-body">
+              <h5 class="card-title text-light">Tank Game</h5>
+              <p class="card-text text-light">Voor mijn tweede opdracht moest ik een tank game maken waar je lokaal met
+                twee spelers kon spelen.
+                Ik heb hierbij ook alle sprites gemaakt in Aseprite.
+              </p>
+              <a href="ProjectBuilds/TankGameBuild.zip" class="btn btn-primary">Download Tank Game</a>
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-7 p-4">
-            <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-              <img src="PortfolioImg/RTSScrnshot.png" class="card-img-top" alt="pongScreenshot">
-                <div class="card-body">
-                  <h5 class="card-title text-light">RTS</h5>
-                  <p class="card-text text-light">Voor het tweede jaar begonnen we met het maken van een RTS in een groep. 
-                    Ik heb de code voor de soldiers geschreven wat jammer genoeg aan het einde omgeschreven moest worden. 
-                    Verder heb ik nog de models gemaakt voor de speler, vijanden en het barrack gebouw. 
-                    Deze models staan in de Blender tab.</p>
-                  <a href="ProjectBuilds/RTSBuild.zip" class="btn btn-primary">Download RTS</a>
-                </div>
+      </div>
+      <div class="row">
+        <div class="col-md-7 p-4">
+          <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+            <img src="PortfolioImg/RTSScrnshot.png" class="card-img-top" alt="pongScreenshot">
+            <div class="card-body">
+              <h5 class="card-title text-light">RTS</h5>
+              <p class="card-text text-light">Voor het tweede jaar begonnen we met het maken van een RTS in een groep.
+                Ik heb de code voor de soldiers geschreven wat jammer genoeg aan het einde omgeschreven moest worden.
+                Verder heb ik nog de models gemaakt voor de speler, vijanden en het barrack gebouw.
+                Deze models staan in de Blender tab.</p>
+              <a href="ProjectBuilds/RTSBuild.zip" class="btn btn-primary">Download RTS</a>
             </div>
           </div>
-          <div class="col-md-5 p-4">
-            <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-              <img src="PortfolioImg/LightenUpScaled.png" class="card-img-top" alt="pongScreenshot">
-                <div class="card-body">
-                  <h5 class="card-title text-light">Lighten Up</h5>
-                  <p class="card-text text-light">In 2024 heb ik meegedaan aan de Global Game Jam in Groningen samen met een paar klasgenoten.
-                    Hierbij heb ik bijna alle sprites en animaties gemaakt. Hieronder een kleine preview van mijn animaties. 
-                  </p>
-                  <a href="PorfolioVids/GGJ2024.mp4" class="btn btn-primary">Lighten Up Video</a>
-                </div>
+        </div>
+        <div class="col-md-5 p-4">
+          <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+            <img src="PortfolioImg/LightenUpScaled.png" class="card-img-top" alt="pongScreenshot">
+            <div class="card-body">
+              <h5 class="card-title text-light">Lighten Up</h5>
+              <p class="card-text text-light">In 2024 heb ik meegedaan aan de Global Game Jam in Groningen samen met een
+                paar klasgenoten.
+                Hierbij heb ik bijna alle sprites en animaties gemaakt. Hieronder een kleine preview van mijn animaties.
+              </p>
+              <a href="PorfolioVids/GGJ2024.mp4" class="btn btn-primary">Lighten Up Video</a>
             </div>
           </div>
-        </div> 
-        <div class="row">
-          <div class="col-md-7 p-4">
-            <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-              <img src="PortfolioImg/TowerDefenceScreenshot.png" class="card-img-top" alt="pongScreenshot">
-                <div class="card-body">
-                  <h5 class="card-title text-light">Tower Defence</h5>
-                  <p class="card-text text-light">De laatste opdracht van het eerste jaar was een tower defence maken samen met een groep.
-                    Ik heb de code gemaakt van de torens die kunnen schieten en de enemies volgen. 
-                    Ook heb ik de models van de toren met de kabouter en de schildpad vijand gemaakt.
-                  </p>
-                  <a href="ProjectBuilds/Tower-Defence.zip" class="btn btn-primary">Download Tower Defence</a>
-                </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-7 p-4">
+          <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+            <img src="PortfolioImg/TowerDefenceScreenshot.png" class="card-img-top" alt="pongScreenshot">
+            <div class="card-body">
+              <h5 class="card-title text-light">Tower Defence</h5>
+              <p class="card-text text-light">De laatste opdracht van het eerste jaar was een tower defence maken samen
+                met een groep.
+                Ik heb de code gemaakt van de torens die kunnen schieten en de enemies volgen.
+                Ook heb ik de models van de toren met de kabouter en de schildpad vijand gemaakt.
+              </p>
+              <a href="ProjectBuilds/Tower-Defence.zip" class="btn btn-primary">Download Tower Defence</a>
             </div>
           </div>
-          <div class="col-md-5 p-4">
-            <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-              <img src="PortfolioImg/UnrealKeuzedeelScreenshot.png" class="card-img-top" alt="UnrealScreenshot">
-                <div class="card-body">
-                  <h5 class="card-title text-light">Unreal Keuzedeel</h5>
-                  <p class="card-text text-light">Voor mijn verdieping keuzedeel heb ik ervoor gekozen om in Unreal Engine 5 een klein doolhof te maken 
-                    waar je drie knoppen moet vinden om de deur naar het einde te openen.
-                    Terwijl je deze knoppen aan het zoeken was zat er ook een vijand achter je aan.
-                  </p>
-                  <a href="https://marlies-boop.itch.io/unreal-maze-game" class="btn btn-primary">Download Unreal Keuzedeel</a>
-                </div>
+        </div>
+        <div class="col-md-5 p-4">
+          <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+            <img src="PortfolioImg/UnrealKeuzedeelScreenshot.png" class="card-img-top" alt="UnrealScreenshot">
+            <div class="card-body">
+              <h5 class="card-title text-light">Unreal Keuzedeel</h5>
+              <p class="card-text text-light">Voor mijn verdieping keuzedeel heb ik ervoor gekozen om in Unreal Engine 5
+                een klein doolhof te maken
+                waar je drie knoppen moet vinden om de deur naar het einde te openen.
+                Terwijl je deze knoppen aan het zoeken was zat er ook een vijand achter je aan.
+              </p>
+              <a href="https://marlies-boop.itch.io/unreal-maze-game" class="btn btn-primary">Download Unreal
+                Keuzedeel</a>
             </div>
           </div>
-        </div> 
+        </div>
+      </div>
     </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+      crossorigin="anonymous"></script>
+</body>
+
 </html>
