--- a/projectenEn.html
+++ b/projectenEn.html
@@ -1,157 +1,170 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body class="bg-dark">
-    <nav class="navbar navbar-expand-lg bg-info">
-        <div class="container">
-          <a class="navbar-brand logo" href="indexEn.html">Marlies Kuipers</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="projectenEn.html">Projects</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="blenderEn.html">Blender</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="overmijEn.html">About me</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contactEn.html">Contact</a>
-              </li>
-            </ul>
-          </div>
-          <div class="vlag">
-            <a href="projecten.html">
-              <img src="PortfolioImg/NederlandseVlag.png" alt="NederlandseVlag" height="40" width="60">
-            </a>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Portfolio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body class="bg-dark">
+  <nav class="navbar navbar-expand-lg bg-info">
+    <div class="container">
+      <a class="navbar-brand logo" href="indexEn.html">Marlies Kuipers</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="projectenEn.html">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="blenderEn.html">Blender</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="overmijEn.html">About me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contactEn.html">Contact</a>
+          </li>
+        </ul>
+      </div>
+      <div class="vlag">
+        <a href="projecten.html">
+          <img src="PortfolioImg/NederlandseVlag.png" alt="NederlandseVlag" height="40" width="60">
+        </a>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container d-flex justify-content-center">
+    <div class="row">
+      <div class="row">
+        <div class="col-md-7 p-4">
+          <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+            <img src="PortfolioImg/raceGameScreenshot.png" class="card-img-top" alt="raceGameScreenshot">
+            <div class="card-body">
+              <h5 class="card-title text-light">Race Game</h5>
+              <p class="card-text text-light">For my third assignment I had to make a racing game where you could race
+                against AI.
+                I made my own models in blender.</p>
+              <a href="ProjectBuilds/Race-GameBuild.zip" class="btn btn-primary">Download Race Game</a>
+            </div>
           </div>
         </div>
-      </nav>
-    
-      <div class="container d-flex justify-content-center">
-        <div class="row">
-          <div class="row">
-            <div class="col-md-7 p-4">
-              <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-                <img src="PortfolioImg/raceGameScreenshot.png" class="card-img-top" alt="raceGameScreenshot">
-                <div class="card-body">
-                  <h5 class="card-title text-light">Race Game</h5>
-                  <p class="card-text text-light">For my third assignment I had to make a racing game where you could race against AI. 
-                    I made my own models in blender.</p>
-                  <a href="ProjectBuilds/Race-GameBuild.zip" class="btn btn-primary">Download Race Game</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-5 p-4">
-              <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-                <img src="PortfolioImg/ScurryScreenshot.png" class="card-img-top" alt="pongScreenshot">
-                  <div class="card-body">
-                    <h5 class="card-title text-light">Scurry</h5>
-                    <p class="card-text text-light">In 2023 I participated in the Global Game Jam in Groningen along with a few classmates. 
-                      I made the backgrounds along with the enemy and his animations.
-                    </p>
-                    <a href="ProjectBuilds/ScurryGGJ23.zip" class="btn btn-primary">Download Scurry</a>
-                  </div>
-              </div>
+        <div class="col-md-5 p-4">
+          <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+            <img src="PortfolioImg/ScurryScreenshot.png" class="card-img-top" alt="pongScreenshot">
+            <div class="card-body">
+              <h5 class="card-title text-light">Scurry</h5>
+              <p class="card-text text-light">In 2023 I participated in the Global Game Jam in Groningen along with a
+                few classmates.
+                I made the backgrounds along with the enemy and his animations.
+              </p>
+              <a href="ProjectBuilds/ScurryGGJ23.zip" class="btn btn-primary">Download Scurry</a>
             </div>
           </div>
-          <div class="row">
-            <div class="col-md-7 p-4">
-              <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-                <img src="PortfolioImg/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
-                  <div class="card-body">
-                    <h5 class="card-title text-light">Pong</h5>
-                    <p class="card-text text-light">Pong was the first game I made during my studies. 
-                      I made the background myself in Aseprite.
-                    </p>
-                    <a href="ProjectBuilds/PongBuild.zip" class="btn btn-primary">Download Pong</a>
-                  </div>
-              </div>
-            </div>
-            <div class="col-md-5 p-4">
-              <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-                <img src="PortfolioImg/tankGameScreenshot.png" class="card-img-top" alt="tankGameScreenshot">
-                  <div class="card-body">
-                    <h5 class="card-title text-light">Tank Game</h5>
-                    <p class="card-text text-light">For my second assignment I had to make a tank game where you could play locally with two players. 
-                      I also made all the sprites in Aseprite for this game.
-                    </p>
-                    <a href="ProjectBuilds/TankGameBuild.zip" class="btn btn-primary">Download Tank Game</a>
-                  </div>
-              </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-7 p-4">
-              <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-                <img src="PortfolioImg/RTSScrnshot.png" class="card-img-top" alt="pongScreenshot">
-                  <div class="card-body">
-                    <h5 class="card-title text-light">RTS</h5>
-                    <p class="card-text text-light">For the second year we started making an RTS in a group. 
-                      I wrote the code for the soldiers which unfortunately had to be rewritten at the end. 
-                      I also made the models for the player, enemies and the barrack building. 
-                      These models are in the Blender tab.</p>
-                    <a href="ProjectBuilds/RTSBuild.zip" class="btn btn-primary">Download RTS</a>
-                  </div>
-              </div>
-            </div>
-            <div class="col-md-5 p-4">
-              <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-                <img src="PortfolioImg/LightenUpScaled.png" class="card-img-top" alt="pongScreenshot">
-                  <div class="card-body">
-                    <h5 class="card-title text-light">Lighten Up</h5>
-                    <p class="card-text text-light">In 2024 I participated in the Global Game Jam in Groningen together with some classmates. 
-                      During this I made almost all the sprites and animations. 
-                      Below is a small preview of my animations.  
-                    </p>
-                    <a href="PorfolioVids/GGJ2024.mp4" class="btn btn-primary">Lighten Up Video</a>
-                  </div>
-              </div>
-            </div>
-          </div> 
-          <div class="row">
-            <div class="col-md-7 p-4">
-              <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-                <img src="PortfolioImg/TowerDefenceScreenshot.png" class="card-img-top" alt="pongScreenshot">
-                  <div class="card-body">
-                    <h5 class="card-title text-light">Tower Defence</h5>
-                    <p class="card-text text-light">The last assignment of the first year was to make a tower defense together with a group. 
-                      I made the code of the towers that made them shoot and follow the enemies. 
-                      I also made the models of the tower with the gnome and the turtle enemy.
-                    </p>
-                    <a href="ProjectBuilds/Tower-Defence.zip" class="btn btn-primary">Download Tower Defence</a>
-                  </div>
-              </div>
-            </div>
-            <div class="col-md-5 p-4">
-              <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
-                <img src="PortfolioImg/UnrealKeuzedeelScreenshot.png" class="card-img-top" alt="UnrealScreenshot">
-                  <div class="card-body">
-                    <h5 class="card-title text-light">Unreal Elective</h5>
-                    <p class="card-text text-light">For my floor elective, I chose to create a small maze in Unreal Engine 5 
-                      where you had to find three buttons to open the door to the end. 
-                      While you were searching for these buttons there was also an enemy chasing you.
-                    </p>
-                    <a href="https://marlies-boop.itch.io/unreal-maze-game" class="btn btn-primary">Download Unreal Elective</a>
-                  </div>
-              </div>
-            </div>
-          </div> 
+        </div>
       </div>
+      <div class="row">
+        <div class="col-md-7 p-4">
+          <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+            <img src="PortfolioImg/pongScreenshot.png" class="card-img-top" alt="pongScreenshot">
+            <div class="card-body">
+              <h5 class="card-title text-light">Pong</h5>
+              <p class="card-text text-light">Pong was the first game I made during my studies.
+                I made the background myself in Aseprite.
+              </p>
+              <a href="ProjectBuilds/PongBuild.zip" class="btn btn-primary">Download Pong</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-5 p-4">
+          <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+            <img src="PortfolioImg/tankGameScreenshot.png" class="card-img-top" alt="tankGameScreenshot">
+            <div class="card-body">
+              <h5 class="card-title text-light">Tank Game</h5>
+              <p class="card-text text-light">For my second assignment I had to make a tank game where you could play
+                locally with two players.
+                I also made all the sprites in Aseprite for this game.
+              </p>
+              <a href="ProjectBuilds/TankGameBuild.zip" class="btn btn-primary">Download Tank Game</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-7 p-4">
+          <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+            <img src="PortfolioImg/RTSScrnshot.png" class="card-img-top" alt="pongScreenshot">
+            <div class="card-body">
+              <h5 class="card-title text-light">RTS</h5>
+              <p class="card-text text-light">For the second year we started making an RTS in a group.
+                I wrote the code for the soldiers which unfortunately had to be rewritten at the end.
+                I also made the models for the player, enemies and the barrack building.
+                These models are in the Blender tab.</p>
+              <a href="ProjectBuilds/RTSBuild.zip" class="btn btn-primary">Download RTS</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-5 p-4">
+          <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+            <img src="PortfolioImg/LightenUpScaled.png" class="card-img-top" alt="pongScreenshot">
+            <div class="card-body">
+              <h5 class="card-title text-light">Lighten Up</h5>
+              <p class="card-text text-light">In 2024 I participated in the Global Game Jam in Groningen together with
+                some classmates.
+                During this I made almost all the sprites and animations.
+                Below is a small preview of my animations.
+              </p>
+              <a href="PorfolioVids/GGJ2024.mp4" class="btn btn-primary">Lighten Up Video</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-7 p-4">
+          <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+            <img src="PortfolioImg/TowerDefenceScreenshot.png" class="card-img-top" alt="pongScreenshot">
+            <div class="card-body">
+              <h5 class="card-title text-light">Tower Defence</h5>
+              <p class="card-text text-light">The last assignment of the first year was to make a tower defense together
+                with a group.
+                I made the code of the towers that made them shoot and follow the enemies.
+                I also made the models of the tower with the gnome and the turtle enemy.
+              </p>
+              <a href="ProjectBuilds/Tower-Defence.zip" class="btn btn-primary">Download Tower Defence</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-5 p-4">
+          <div class="card h-100 text-center bg-secondary" style="width: 30rem;">
+            <img src="PortfolioImg/UnrealKeuzedeelScreenshot.png" class="card-img-top" alt="UnrealScreenshot">
+            <div class="card-body">
+              <h5 class="card-title text-light">Unreal Elective</h5>
+              <p class="card-text text-light">For my floor elective, I chose to create a small maze in Unreal Engine 5
+                where you had to find three buttons to open the door to the end.
+                While you were searching for these buttons there was also an enemy chasing you.
+              </p>
+              <a href="https://marlies-boop.itch.io/unreal-maze-game" class="btn btn-primary">Download Unreal
+                Elective</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-          <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"></script>
+</body>
+
 </html>
